[package]
name = "banyan-shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO: sort dependencies
# TODO better error types than anyhow
anyhow = "1.0"
ethers = { git = "https://github.com/gakonst/ethers-rs" }
ethers-contract = "0.17.0"
ethers-contract-derive = "0.17.0"
bao = "0.12"
# TODO do we really need all of sled just to get ivecs?
sled = "0.34"
cid = "0.8"
serde = { version = "1", features = ["derive"] }
tempfile = "3.3"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.11", features = ["stream","multipart","json"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
multihash = "0.16.3"
multibase = "0.9.1"
lazy_static = "1.4.0"
libmath = "0.2.1"
serde_json = "1.0.72"
sha2 = "0.10.5"
blake3 = "1.3.1"
