[package]
name = "banyan-shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
ethers = { git = "https://github.com/gakonst/ethers-rs" }
ethers-contract-derive = "0.17.0"
bao = "0.12"
sled = "0.34"
cid = "0.8"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.11", features = ["stream","multipart","json"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
multihash = "0.16.3"
lazy_static = "1.4.0"
libmath = "0.2.1"
serde_json = "1.0.72"
blake3 = "1.3.1"
#num-traits = "0.2"
#num-derive = "0.2"
dotenv = "0.15.0"
ipfs-api = { version = "0.16.0", features = ["with-hyper"], default-features = false }
futures = "0.3.24"
